--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start": "cross-env NODE_ENV=development webpack-dev-server --hot",
     "build": "cross-env NODE_ENV=production webpack",
     "lint": "eslint ./src",
-    "dist:es6": "del-cli ./dist-es6 && cross-env BABEL_ENV=es6 babel ./src --out-dir ./dist-es6  && cp ./src/*.css ./dist-es6",
-    "dist:modules": "del-cli ./dist-modules && cross-env BABEL_ENV=modules babel ./src --out-dir ./dist-modules && cp ./src/*.css ./dist-modules",
+    "dist:es6": "del-cli ./dist-es6 && cross-env BABEL_ENV=es6 babel ./src --out-dir ./dist-es6",
+    "dist:modules": "del-cli ./dist-modules && cross-env BABEL_ENV=modules babel ./src --out-dir ./dist-modules",
     "prepublishOnly": "npm run dist:es6 && npm run dist:modules"
   },
   "dependencies": {
@@ -34,7 +34,7 @@
     "eslint-plugin-react": "^7.12.4",
     "html-webpack-plugin": "^3.2.0",
     "react-hot-loader": "^4.6.5",
-    "webpack": "^4.29.3",
+    "webpack": "^3.10.0",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.1.14"
   },
